* Correción en la importación de las configuraciones   * Optimización gestión de conexiones a las BBDD's   * Actualización a AWS SDK V2